--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "next": "12.3.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.24.0"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "sequelize-cli": "^6.5.1",
     "typescript": "^4.8.4"
   }
 }
