--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fast-xml-parser": "^4.0.11",
     "next": "12.3.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "sequelize-cli": "^6.5.1",
