--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/sequelize-adapter": "^1.0.6",
+    "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sequelize": "^6.24.0",
+    "sequelize": "^6.25.3",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
