--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.13.5",
     "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
     "next": "12.3.1",
