--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanitize-html": "^2.7.3",
     "sequelize": "^6.25.3",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
+    "@types/sanitize-html": "^2.6.2",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "babel-plugin-styled-components": "^2.0.7",
